# envSarujuk

./: docker-compose-django.yml  pyproject.toml
account/: admin.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_address_id_alter_user_social_media_id.py  0003_alter_user_address_id.py  0004_alter_user_name_alter_user_phone_number.py  0005_rename_name_user_first_name_user_date_joined_and_more.py  0006_user_photo_profile.py  0007_alter_user_photo_profile.py  0008_alter_user_email.py  0009_alter_user_photo_profile.py  0010_alter_user_social_media_id.py  0011_remove_user_social_media_id.py
core/: settings.py  urls.py  views.py
envsarujuk/: 400.html  403.html  429.html  500.html  504.html  base.html  index.html  login.html  profile_detail.html
envsarujuk/admin/: base_site.html
envsarujuk/charts/: chartjs.html
envsarujuk/exceptions/: 400.html  404.html  503.html
envsarujuk/forms/: basic_elements.html
envsarujuk/icons/: mdi.html
envsarujuk/tables/: basic-table.html
envsarujuk/ui-features/: buttons.html  dropdowns.html  typography.html
social/: admin.py  models.py  serializers.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_address_user_alter_account_photo_profile_and_more.py  0003_alter_address_address.py  0004_account_created_at_account_updated_at_and_more.py  0005_account_follower_account_following_and_more.py  0006_socialmedia_account_id.py  0007_rename_follower_account_followers_and_more.py  0008_socialmedia_user.py  0009_socialmedia_account_id_alter_platform_name.py  0018_account_reviews.py  (+9 more)
(+5 files in other folders)
